hphp/hack/test/typecheck/dynamic/refinement.php.exp
File "refinement.php", line 18, characters 11-12:
Invalid return type (Typing[4110])
  File "refinement.php", line 8, characters 46-70:
  Expected `AnyArray<arraykey, mixed>`
  File "refinement.php", line 17, characters 13-25:
  But got `dynamic` from this `is` expression test
File "refinement.php", line 21, characters 18-19:
Invalid argument (Typing[4110])
  File "refinement.php", line 6, characters 24-29:
  Expected `D<int>`
  File "refinement.php", line 20, characters 13-16:
  But got `dynamic` from this `is` expression test
